--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.5.0",
     "react": "^18.1.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
