--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "emotion-flex": "^2.0.0",
     "graphql": "^16.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
